fixed buttons on footer that were not showing properly on mobile view.

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ body {
   right: 10px;
   bottom: 20px;
   position: fixed;
-
+  transition: 0.3s;
 
 }
 
@@ -59,36 +59,15 @@ body {
   transform: scaleY(1) scaleX(1) translateY(-16px) translateX(0px);
 }
 
-.fab-action-button:hover + .fab-buttons .fab-buttons__link:before {
-  visibility: visible;
-  opacity: 1;
-  transform: scale(1);
-  transform-origin: right center 0;
-  transition-delay: 0.3s;
-}
-
-.fab-action-button {
-  position: absolute;
-  bottom: 0;
-  display: block;
-  width: 56px;
-  height: 56px;
-  background-color: #29B6F6;
-  border-radius: 50%;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-}
-
 .fab-buttons {
   position: absolute;
-
-  right: 0;
   bottom: 50px;
   list-style: none;
   margin: 0;
   padding: 0;
   opacity: 0;
   visibility: hidden;
-  transition: 0.2s;
+  transition: 0.3s;
 }
 
 .fab-action-button__icon {
@@ -100,7 +79,7 @@ body {
 .fab-buttons__item {
   display: block;
   text-align: center;
-  margin: 12px 0;
+  margin: 12px 10px;
 }
 
 .fab-buttons__link {
@@ -151,6 +130,7 @@ body {
   display: inline-block;
   width: 40px;
   height: 40px;
+
 }
 
 .icon-material_fb {
